Fix respond.js problem on IE8

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,7 +11,6 @@
     width: 135px;
     height: 106px;
     @include bp(beta) {
-      left: 40px;
       position: relative;
       top: 20px;
     }
